update particlesystem name

--- a/particlepanda.kv
+++ b/particlepanda.kv
@@ -30,7 +30,7 @@ TestGame:
             gameworld: gameworld
             zones: ['general']
             particle_zone: 'general'
-        ParticlesRenderer:
+        ParticleRenderer:
             gameworld: gameworld
             zones: ['general']
             shader_source: 'assets/glsl/positionrotatecolorscale.glsl'
